# bot__orion

./: .env_exemplo  .gitignore  ATUALIZ.md  CLAUDE.md  INTERFACE_ORIN.MD  ORION_MEMORIA.MD  ORION_PERSONALIDADE.md  README.md  SKILL.md  arquitetura_plugins.md  discover.py  env_loader.py  flamengo.json  main.py  orion_desktop.py  orion_vision.md  personalidade.txt  pyproject.toml  requirements.txt  test_browser.py  walkthrough.md
.claude/: settings.local.json
handlers/: auto_learn.py  controle.py  jogos.py  midia.py  sistema.py  start.py  voice.py  volume.py
handlers/custom/: nome.py  steam.py
memoria/: curto_prazo_178663471.json  environment_map.json  file_index.json  longo_prazo_178663471.json
ml/: __init__.py  intent_model.py  modelo.pkl  treino.json
plugins/: agenda.py  alarme_agua.py  email_manager.py  futebol.py  gmail_reader.py  proximo_jogo.py  ultimo_jogo.py
plugins/files/: __init__.py  indexer.py  open.py  organize.py  search.py
ui/: app.js  index.html  styles.css
utils/: apps_config.py  browser_manager.py  claude_client.py  code_validator.py  context_resolver.py  daily_alerts.py  datetime_utils.py  executor.py  handler_registry.py  intent_parser.py  interface_bridge.py  memoria.py  mic_listener.py  openai_client.py  orchestrator.py  presence.py  prompt_builder.py  smart_alerts.py  steam_scanner.py  transcriber.py  tts_manager.py  vision.py  whatsapp_client.py
wallpaper_engine/: README.md
wallpaper_engine/orion_core/: app.js  index.html  project.json  styles.css
whatsapp_server/: package.json  server.js
