[project]
name = "orion-bot"
version = "0.1.0"
description = "Bot Telegram para controle remoto do PC com suporte a voz"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "pycaw>=20240210",
    "comtypes>=1.4.0",
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "yt-dlp>=2024.1.0",
    "pyautogui>=0.9.54",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "openai>=2.30.0",
    "edge-tts>=7.0.0",
    "playsound==1.2.2",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "websockets>=12.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "mss>=9.0.0",
    "pytesseract>=0.3.10",
    "opencv-python>=4.9.0",
    "Pillow>=10.0.0",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "playwright>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
